# social-content-agents

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.json  index.schema.json  pyproject.toml  schema.json  taxonomy.md
competitors/: canva.json  figma.json  notion.json  webflow.json
copy/: hooks.json
data/niches/: README.md
frameworks/acquisition/: acquisition-content-model.json  acquisition-diagnostic.json  bottleneck-map.json
industries/beauty/: beauty.json
industries/medical/: medical.json
motion/framer/: char-scroll-reveal.json  magnetic-cursor.json  scroll-marquee.json  sticky-card-stack.json
motion/gsap/: scroll-trigger.json  stagger-entrance.json  text-reveal.json
motion/three-js/: morphing-geometry.json  scroll-scene.json
motion/vanilla/: mouse-scrub-video.json  role-carousel.json  svg-beam-machine.json  typewriter.json  video-fade-loop.json
references/: index.json
references/identities/: README.md  _schema.json
sites/agencies/: basic-agency.json  collins.json
sites/luxury/: aesop.json  loro-piana.json
sites/saas/: adfolio.json  framer.json  linear.json  raycast.json  savee.json  stripe.json  vercel.json
sites/webgl/: active-theory.json  lusion.json
src/: main.py  query.py
src/agents/: copy_agent.py  design_agent.py  niche_intelligence_agent.py  performance_agent.py  prompt_engineer_agent.py  prospecting_agent.py  publishing_agent.py  research_agent.py  trend_agent.py  visual_spec_agent.py
src/core/: agent.py  config.py  llm.py  memory.py  models.py  orchestrator.py  skill.py
src/skills/: html_renderer.py  image_integrator.py  niche_discovery.py  operator_notifier.py  puppeteer_exporter.py
src/storage/: db.py  models.py
src/workflows/: auto_publish.py  campaign_builder.py  content_factory.py
tests/: test_niche_discovery.py  test_prompt_engineer.py  test_visual_pipeline.py
visual/color-systems/: creative-agency.json  tech-saas.json
visual/styles/: bold-typographic.json  clean-minimal.json  liquid-glass.json
(+16 files in other folders)
