[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "social-content-agents"
version = "0.1.0"
description = "Framework de deep agents para criação de conteúdo em escala"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Storage
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",
    # Utils
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
# Instalar só se usar LLM_PROVIDER=anthropic / openai / google
anthropic = ["anthropic>=0.40.0"]
openai    = ["openai>=1.50.0"]
google    = ["google-generativeai>=0.8.0"]
all-llm   = ["anthropic>=0.40.0", "openai>=1.50.0", "google-generativeai>=0.8.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[project.scripts]
social-agents = "src.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
