[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "marketingos-references"
version = "1.0.0"
description = "Diretório de referências visuais e de animação para o MarketingOS"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ref-query = "src.query:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
